[gd_scene load_steps=2 format=3 uid="uid://dhne06yd0qj4y"]

[ext_resource type="Script" path="res://Scenes/Menus/OptionMenu.gd" id="1_ls51q"]

[node name="OptionMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ls51q")

[node name="BackButton" type="Button" parent="."]
layout_mode = 0
offset_left = 24.0
offset_top = 24.0
offset_right = 69.0
offset_bottom = 55.0
text = "Back
"

[node name="GridContainer" type="GridContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -114.5
offset_top = -25.0
offset_right = 114.5
offset_bottom = 25.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/h_separation = 12
theme_override_constants/v_separation = 16
columns = 2

[node name="SfxLabel" type="Label" parent="GridContainer"]
layout_mode = 2
text = "Sound Effects"
horizontal_alignment = 2

[node name="SfxSlider" type="HSlider" parent="GridContainer"]
custom_minimum_size = Vector2(120, 0)
layout_mode = 2
value = 100.0
tick_count = 6
ticks_on_borders = true

[node name="BgmLabel" type="Label" parent="GridContainer"]
layout_mode = 2
text = "Music"
horizontal_alignment = 2

[node name="BgmSlider" type="HSlider" parent="GridContainer"]
custom_minimum_size = Vector2(120, 0)
layout_mode = 2
value = 100.0
tick_count = 6
ticks_on_borders = true

[node name="ColorLabelA" type="Label" parent="GridContainer"]
layout_mode = 2
text = "Color 1"
horizontal_alignment = 2

[node name="ColorPickerA" type="ColorPickerButton" parent="GridContainer"]
layout_mode = 2
text = "Color"

[node name="ColorLabelB" type="Label" parent="GridContainer"]
layout_mode = 2
text = "Color 2"
horizontal_alignment = 2

[node name="ColorPickerB" type="ColorPickerButton" parent="GridContainer"]
layout_mode = 2
text = "Color"

[connection signal="pressed" from="BackButton" to="." method="_on_back_button_pressed"]
[connection signal="value_changed" from="GridContainer/SfxSlider" to="." method="_on_sfx_slider_value_changed"]
[connection signal="value_changed" from="GridContainer/BgmSlider" to="." method="_on_bgm_slider_value_changed"]
[connection signal="color_changed" from="GridContainer/ColorPickerA" to="." method="_on_color_picker_1_color_changed"]
[connection signal="color_changed" from="GridContainer/ColorPickerB" to="." method="_on_color_picker_2_color_changed"]
